--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2928,6 +2928,13 @@ input, select, textarea {
 				width: calc(100% - 10px);
 			}
 
+			.main .goto-next- {
+				-moz-transition: background-color 0.2s ease-in-out;
+				-webkit-transition: background-color 0.2s ease-in-out;
+				-ms-transition: background-color 0.2s ease-in-out;
+				transition: background-color 0.2s ease-in-out;	
+			}
+
 		.main .goto-next {
 			-moz-transition: background-color 0.2s ease-in-out;
 			-webkit-transition: background-color 0.2s ease-in-out;
