--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,6 +175,11 @@ input, select, textarea {
   to {opacity: 1}
 }
 
+	#menuText{
+		font-style: italic;
+			font-style: bold;
+	}
+
 	#brand {
 		position:relative;
 		
@@ -3108,8 +3113,34 @@ input, select, textarea {
 	@media screen and (max-width: 980px) {
 
 		#brand{
-			width: 300px;
-			height: 300px;
+			width: 280px;
+			height: 280px;
+		}
+
+		#menuText{
+			margin-top: 0.5em;
+			font-size: 1.7em;
+			font-style: italic;
+			font-style: bold;
+		}
+
+		#sliderText{
+			font-size: 1.3em;
+			text-align: center;
+		}
+
+		.projectImages{
+			width: 520px;
+			height: 350px;
+		}
+
+		.menuImages{
+			width: 180px;
+			height: 180px;
+		}
+
+		.button.primary {
+			font-size: 1.5em;
 		}
 
 		/* Main BG */
@@ -3138,6 +3169,16 @@ input, select, textarea {
 			#header header {
 				padding-bottom: 9em;
 				width: 80%;
+			}
+
+			#header header h1 {
+				margin-top: 1em;
+				font-size: 3em;
+			}
+
+			#header header p {
+				font-size: 1.5em;
+				margin-top: 1em;
 			}
 
 			#header .container {
@@ -3175,9 +3216,7 @@ input, select, textarea {
 
 		#menuText{
 			margin-top: 0.5em;
-			font-size: 1.7em;
-			font-style: italic;
-			font-style: bold;
+			font-size: 1.7em;	
 		}
 
 		#sliderText{
@@ -3259,8 +3298,7 @@ input, select, textarea {
 
 		#brand{
 			width: 120px;
-			height: 120px;
-			 
+			height: 120px;			 
 		}	
 
 		.projectImages{
@@ -3273,7 +3311,6 @@ input, select, textarea {
 			height: 100px;
 		}
 
-	
 		/* Basic */
 
 			html, body {
