--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,6 +175,138 @@ input, select, textarea {
   to {opacity: 1}
 }
 
+	/* TIMELINE */
+
+	* {
+		box-sizing: border-box;
+	  }
+	  
+	  /* The actual timeline (the vertical ruler) */
+	  .timeline {
+		position: relative;
+		max-width: 1200px;
+		margin: 0 auto;
+	  }
+	  
+	  /* The actual timeline (the vertical ruler) */
+	  .timeline::after {
+		content: '';
+		position: absolute;
+		width: 6px;
+		background-color: white;
+		top: 0;
+		bottom: 0;
+		left: 50%;
+		margin-left: -3px;
+	  }
+	  
+	  /* Container around content */
+	  .containerT {
+		padding: 5px 10px;
+		position: relative;
+		background-color: inherit;
+		width: 50%;
+	  }
+	  
+	  /* The circles on the timeline */
+	  .containerT::after {
+		content: '';
+		position: absolute;
+		width: 20px;
+		height: 20px;
+		right: -17px;
+		background-color: white;
+		border: 4px solid #794286;
+		top: 15px;
+		border-radius: 50%;
+		z-index: 1;
+	  }
+	  
+	  /* Place the container to the left */
+	  .left {
+		left: 0;
+	  }
+	  
+	  /* Place the container to the right */
+	  .right {
+		left: 50%;
+	  }
+	  
+	  /* Add arrows to the left container (pointing right) */
+	  .left::before {
+		content: " ";
+		height: 0;
+		position: absolute;
+		top: 22px;
+		width: 0;
+		z-index: 1;
+		right: 30px;
+		border: medium solid white;
+		border-width: 10px 0 10px 10px;
+		border-color: transparent transparent transparent white;
+	  }
+	  
+	  /* Add arrows to the right container (pointing left) */
+	  .right::before {
+		content: " ";
+		height: 0;
+		position: absolute;
+		top: 22px;
+		width: 0;
+		z-index: 1;
+		left: 30px;
+		border: medium solid white;
+		border-width: 10px 10px 10px 0;
+		border-color: transparent white transparent transparent;
+	  }
+	  
+	  /* Fix the circle for containers on the right side */
+	  .right::after {
+		left: -16px;
+	  }
+	  
+	  /* The actual content */
+	  .contentT {
+		padding: 2px 3px;
+		background-color: white;
+		position: relative;
+		border-radius: 6px;
+	  }
+	  
+	  /* Media queries - Responsive timeline on screens less than 600px wide */
+	  @media screen and (max-width: 600px) {
+		/* Place the timelime to the left */
+		.timeline::after {
+		left: 31px;
+		}
+		
+		/* Full-width containers */
+		.containerT {
+		width: 100%;
+		padding-left: 7px;
+		padding-right: 2.5px;
+		}
+		
+		/* Make sure that all arrows are pointing leftwards */
+		.containerT::before {
+		left: 60px;
+		border: medium solid white;
+		border-width: 10px 10px 10px 0;
+		border-color: transparent white transparent transparent;
+		}
+	  
+		/* Make sure all circles are at the same spot */
+		.left::after, .right::after {
+		left: 15px;
+		}
+		
+		/* Make all right containers behave like the left ones */
+		.right {
+		left: 0%;
+		}
+	  }
+
+	/* TIMELINE */
 	#menuText{
 		font-style: italic;
 		font-style: bold;
@@ -3095,6 +3227,36 @@ input, select, textarea {
 	@media screen and (max-width: 1680px) {
 
 		/* Basic */
+		#brand{
+			width: 250px;
+			height: 250px;
+		}
+
+		#menuText{
+			margin-top: 0.5em;
+			font-size: 1.7em;	
+		}
+
+		#sliderText{
+			font-size: 1.3em;
+			text-align: center;
+		}
+
+		.projectImages{
+			width:  970px;
+			height: 550px;
+		}
+
+		.menuImages{
+			width: 180px;
+			height: 180px;
+		}
+
+		/* Basic */
+			h1{
+				font-size: 10.35em;
+			}
+			
 
 			body, input, select, textarea {
 				font-size: 12pt;
@@ -3105,7 +3267,6 @@ input, select, textarea {
 				height: 300px;
 			}
 			
-
 	}
 
 /* Medium */
@@ -3130,7 +3291,7 @@ input, select, textarea {
 		}
 
 		.projectImages{
-			width: 520px;
+			width: 470px;
 			height: 350px;
 		}
 
